tmp/out.txt
HelloWorld.java:13: error: illegal start of type
    default void normalFun() 
    ^
HelloWorld.java:13: error: = expected
    default void normalFun() 
            ^
HelloWorld.java:13: error: ';' expected
    default void normalFun() 
                ^
HelloWorld.java:13: error: illegal start of type
    default void normalFun() 
                          ^
HelloWorld.java:13: error: <identifier> expected
    default void normalFun() 
                           ^
HelloWorld.java:14: error: = expected
    { 
    ^
HelloWorld.java:14: error: ';' expected
    { 
     ^
HelloWorld.java:15: error: illegal start of type
       System.out.println("Hello"); 
             ^
HelloWorld.java:15: error: = expected
       System.out.println("Hello"); 
                 ^
HelloWorld.java:15: error: <identifier> expected
       System.out.println("Hello"); 
                         ^
HelloWorld.java:15: error: illegal start of type
       System.out.println("Hello"); 
                          ^
HelloWorld.java:17: error: class, interface, or enum expected
} 
^
HelloWorld.java:26: error: ')' expected
        FuncInterface fobj = (int x)->System.out.println(2*x); 
                                 ^
HelloWorld.java:26: error: ';' expected
        FuncInterface fobj = (int x)->System.out.println(2*x); 
                                   ^
14 errors
